# syslog-ebpf

./: .gitignore  Cargo.toml  Makefile  README.md  output.csv  setup.sh
syslog/: Cargo.toml
syslog-common/: Cargo.toml
syslog-common/src/: lib.rs
syslog-ebpf/: Cargo.toml
syslog-ebpf/src/: main.rs
syslog/src/: main.rs
xtask/src/: build_ebpf.rs  run.rs
