[package]
name = "syslog"
version = "0.1.0"
edition = "2021"
publish = false

[dependencies]
aya = { version = ">=0.11", features=["async_tokio"] }
aya-log = "0.1"
syslog-common = { path = "../syslog-common", features=["user"] }
anyhow = "1.0.42"
clap = { version = "3.1", features = ["derive"] }
log = "0.4"
simplelog = "0.12"
tokio = { version = "1.18", features = ["macros", "rt", "rt-multi-thread", "net", "signal", "sync"] }
bytes = "1.2"
csv = "1.1"
serde = { version = "1", features = ["derive"] }

[[bin]]
name = "syslog"
path = "src/main.rs"
